force-app/main/default/objects/BMCServiceDesk__Normalization_Transaction__c/BMCServiceDesk__Normalization_Transaction__c.object-meta.xml
<CustomObject>
    <description>Stores records that are generated as exceptions to normalization rules.</description>
    <label>Normalization Transaction</label>
    <nameField>
        <displayFormat>Transaction-{0000}</displayFormat>
        <label>Normalization Transaction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Normalization Transactions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>