force-app/main/default/objects/BMCServiceDesk__Normalization_Transaction__c/fields/BMCServiceDesk__FKBase_Element__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__FKBase_Element__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Base Element</label>
    <referenceTo>BMCServiceDesk__BMC_BaseElement__c</referenceTo>
    <relationshipLabel>Normalization Transactions</relationshipLabel>
    <relationshipName>Normalization_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>