force-app/main/default/objects/BMCServiceDesk__Normalization_Transaction__c/fields/BMCServiceDesk__FKModel__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__FKModel__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Model</label>
    <referenceTo>BMCServiceDesk__Model__c</referenceTo>
    <relationshipLabel>Normalization Transactions</relationshipLabel>
    <relationshipName>Normalization_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>