force-app/main/default/objects/BMCServiceDesk__Normalization_Transaction__c/fields/BMCServiceDesk__FKNormalization_Metadata__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__FKNormalization_Metadata__c</fullName>
    <label>Normalization Metadata</label>
    <referenceTo>BMCServiceDesk__Normalization_Metadata__c</referenceTo>
    <relationshipLabel>Normalization Transactions</relationshipLabel>
    <relationshipName>Normalization_Transactions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>