force-app/main/default/objects/BMCServiceDesk__Normalization_Transaction__c/fields/BMCServiceDesk__FKNormalization_Rule__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__FKNormalization_Rule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Normalization Rule</label>
    <referenceTo>BMCServiceDesk__Normalization_Rule__c</referenceTo>
    <relationshipLabel>Normalization Transactions</relationshipLabel>
    <relationshipName>Normalization_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>