force-app/main/default/objects/BMCServiceDesk__Normalization_Transaction__c/fields/BMCServiceDesk__FKNormalization_Transaction_Master__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__FKNormalization_Transaction_Master__c</fullName>
    <label>Normalization Transaction Master</label>
    <referenceTo>BMCServiceDesk__Normalization_Transaction_Master__c</referenceTo>
    <relationshipLabel>Normalization Transactions</relationshipLabel>
    <relationshipName>Normalization_Transactions</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>